# GraduationProject

./: README.md  app.py
GoNetwork/: python_backend.py  run.py
GoNetwork/config/: config.json
GoNetwork/model/: flop_benchmark.py  train.py  train_model.py
GoNetwork/utils/: dataset_process.py  log_process.py  util.py
MartrixGoC++/: CMakeLists.txt  MartrixGo.cpp
MartrixGoC++/include/: App.hpp  BoardEncode.hpp  CommandLinePlayer.hpp  Game.hpp  GoBlock.hpp  GoSGF.hpp  Log.hpp  MCTS.hpp  MCTSPlayer.hpp  Player.hpp  Point.hpp  PythonBackend.hpp  RandomPlayer.hpp  SafeQueue.hpp  SocketPlayer.hpp  Step.hpp  ThreadPool.hpp  TreeNode.hpp
MartrixGoC++/src/: App.cpp  CommandLinePlayer.cpp  Game.cpp  GoBlock.cpp  GoSGF.cpp  Log.cpp  MCTS.cpp  MCTSPlayer.cpp  Player.cpp  Point.cpp  PythonBackend.cpp  RandomPlayer.cpp  SocketPlayer.cpp  Step.cpp  TreeNode.cpp  main.cpp
MartrixGoUI/: MartrixGoUI.sln
MartrixGoUI/MartrixGoUI/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form2.resx  Program.cs
MartrixGoUI/MartrixGoUI/Properties/: Resources.Designer.cs  Resources.resx
MatrixGo/: GoGame.py  GoSGF.py  test_board
MatrixGoPy/: GoGame.py  GoSGF.py
MatrixGoPy/utils/: boardEncode.py
qt_demo/: IconForm.py  QLabelBuddy.py  QLabelDemo.py  QLineEditCheck.py  QLineEditEcho.py  ToolTip.py  app.py  first_main_window.py  screen_geometry.py
qt_demo/GoGame/: GoBoard.py  GoEntity.py  GoSGF.py  app.py
qt_demo/MatrixGo/: GoGame.py  GoSGF.py
utils/: boardEncode.py  processData.py  refactor.py
